# mupen64plus-rs

./: Cargo.toml  README.md
examples/: custom_video.rs  frontend.rs
libs/: libmupen64plus.dylib  mupen64plus-audio-sdl.dylib  mupen64plus-input-sdl.dylib  mupen64plus-rsp-hle.dylib  mupen64plus-video-glide64mk2.dylib
src/: core.rs  lib.rs  plugin.rs  vidext.rs
src/core/: debug.rs
